# plutus-midnight-zk

./: .gitignore  CONSTRAINT_SYSTEM.md  Cargo.toml  HALO2_EXPLAINER.md  README.md  VERIFIER_SPEC.md  cabal.project  flake.nix
nix/: configuration.nix  outputs.nix  project.nix  shell.nix
plutus-midnight-zk/: plutus-midnight-zk.cabal
plutus-midnight-zk/bench/: BenchCommon.hs  EquivCheck.hs  Main.hs  Scripts.hs  SpecializedVerifier.hs  SpecificScripts.hs
plutus-midnight-zk/bench/EquivScripts/: ShaPreimage.hs
plutus-midnight-zk/bench/SpecificScripts/: BitcoinSig.hs  Ecc.hs  EcdsaThreshold.hs  EthereumSig.hs  Membership.hs  NativeGadgets.hs  Poseidon.hs  RsaSig.hs  SchnorrSig.hs  ShaPreimage.hs
plutus-midnight-zk/src/Plutus/Crypto/: BlsUtils.hs
plutus-midnight-zk/src/Plutus/Crypto/MidnightZk/: JsonParser.hs  Transcript.hs  Types.hs  Verifier.hs
plutus-midnight-zk/test/: Debug.hs  Main.hs
rust-midnight-zk/: Cargo.toml
rust-midnight-zk/src/: circuit_params.rs  lib.rs  main.rs  rotation_sets.rs
rust-midnight-zk/src/examples/: bitcoin_sig.rs  ecc.rs  ecdsa_threshold.rs  ethereum_sig.rs  membership.rs  mod.rs  native_gadgets.rs  poseidon.rs  rsa_sig.rs  schnorr_sig.rs  sha_preimage.rs
scripts/: fourmolize.sh
test-vectors/bitcoin-sig/: bitcoin_sig_circuit_constraint.json  bitcoin_sig_circuit_params.json  bitcoin_sig_plutus_instance.json  bitcoin_sig_plutus_proof.json  bitcoin_sig_plutus_vk.json  bitcoin_sig_rotation_sets.json
test-vectors/ecc/: ecc_circuit_params.json  ecc_plutus_instance.json  ecc_plutus_proof.json  ecc_plutus_vk.json  ecc_rotation_sets.json
test-vectors/ecdsa-threshold/: ecdsa_threshold_circuit_constraint.json  ecdsa_threshold_circuit_params.json  ecdsa_threshold_plutus_instance.json  ecdsa_threshold_plutus_proof.json  ecdsa_threshold_plutus_vk.json  ecdsa_threshold_rotation_sets.json
test-vectors/ethereum-sig/: ethereum_sig_circuit_constraint.json  ethereum_sig_circuit_params.json  ethereum_sig_plutus_instance.json  ethereum_sig_plutus_proof.json  ethereum_sig_plutus_vk.json  ethereum_sig_rotation_sets.json
test-vectors/membership/: membership_circuit_constraint.json  membership_circuit_params.json  membership_plutus_instance.json  membership_plutus_proof.json  membership_plutus_vk.json  membership_rotation_sets.json
test-vectors/native-gadgets/: native_gadgets_circuit_constraint.json  native_gadgets_circuit_params.json  native_gadgets_plutus_instance.json  native_gadgets_plutus_proof.json  native_gadgets_plutus_vk.json  native_gadgets_rotation_sets.json
test-vectors/poseidon/: poseidon_plutus_instance.json  poseidon_plutus_proof.json  poseidon_plutus_vk.json  poseidon_rotation_sets.json
test-vectors/rsa-sig/: rsa_sig_circuit_constraint.json  rsa_sig_circuit_params.json  rsa_sig_plutus_instance.json  rsa_sig_plutus_proof.json  rsa_sig_plutus_vk.json  rsa_sig_rotation_sets.json
test-vectors/schnorr-sig/: schnorr_sig_circuit_constraint.json  schnorr_sig_circuit_params.json  schnorr_sig_plutus_instance.json  schnorr_sig_plutus_proof.json  schnorr_sig_plutus_vk.json  schnorr_sig_rotation_sets.json
test-vectors/sha-preimage/: sha_preimage_circuit_constraint.json  sha_preimage_circuit_params.json  sha_preimage_plutus_instance.json  sha_preimage_plutus_proof.json  sha_preimage_plutus_vk.json  sha_preimage_rotation_sets.json
