[workspace]
members  = ["rust-midnight-zk"]
resolver = "2"

[workspace.dependencies]
midnight-circuits  = "7.0.0"
midnight-proofs    = "0.8.0"
midnight-zk-stdlib = "2.0.0"
midnight-curves    = "0.3.0"
ff          = "0.13"
group       = "0.13"
serde_json  = "1"
rand        = "0.8"
rand_chacha = "0.3"
sha2        = "0.10"
hex-literal = "0.4"
num-bigint  = { version = "0.4", features = ["rand"] }
num-traits  = "0.2"

[patch.crates-io]
midnight-proofs    = { git = "https://github.com/midnightntwrk/midnight-zk.git", branch = "main" }
midnight-curves    = { git = "https://github.com/midnightntwrk/midnight-zk.git", branch = "main" }
midnight-circuits  = { git = "https://github.com/midnightntwrk/midnight-zk.git", branch = "main" }
midnight-zk-stdlib = { git = "https://github.com/midnightntwrk/midnight-zk.git", branch = "main" }
