cabal-version: 3.0
name: plutus-midnight-zk
version: 1.0.0.0
license: Apache-2.0
author: Thomas Vellekoop
maintainer: thomas.vellekoop@iohk.io
synopsis: "a plutus verifier for midnight-zk circuits"
build-type: Simple

executable main
  hs-source-dirs: src
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    base >=4.2 && <5
