cabal-version: 3.0
name: plutus-midnight-zk
version: 1.0.0.0
license: Apache-2.0
author: Thomas Vellekoop
maintainer: thomas.vellekoop@iohk.io
synopsis: "a plutus verifier for midnight-zk circuits"
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Plutus.Crypto.BlsUtils
    Plutus.Crypto.MidnightZk.JsonParser
    Plutus.Crypto.MidnightZk.Transcript
    Plutus.Crypto.MidnightZk.Types
    Plutus.Crypto.MidnightZk.Verifier

  build-depends:
    aeson,
    base >=4.2 && <5,
    base16-bytestring,
    bytestring,
    plutus-core ^>=1.61,
    plutus-tx ^>=1.61,
    text,
    vector,

test-suite run-vector-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    aeson,
    base >=4.2 && <5,
    plutus-midnight-zk,
