cabal-version: 3.0
name: plutus-midnight-zk
version: 1.0.0.0
license: Apache-2.0
author: Thomas Vellekoop
maintainer: thomas.vellekoop@iohk.io
synopsis: "a plutus verifier for midnight-zk circuits"
build-type: Simple

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Plutus.Crypto.BlsUtils
    Plutus.Crypto.MidnightZk.JsonParser
    Plutus.Crypto.MidnightZk.Transcript
    Plutus.Crypto.MidnightZk.Types
    Plutus.Crypto.MidnightZk.Verifier

  build-depends:
    aeson,
    base >=4.2 && <5,
    base16-bytestring,
    bytestring,
    plutus-core ^>=1.62,
    plutus-tx ^>=1.62,
    text,
    vector,

test-suite run-vector-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    aeson,
    base >=4.2 && <5,
    plutus-midnight-zk,

benchmark bench
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: bench
  other-modules:
    BenchCommon
    Scripts

  -- plutus-tx-plugin only supports GHC 9.6.x and 9.12.x; haskell.nix evaluates
  -- all GHC variant plans, so this guard prevents the bench from being resolved
  -- against unsupported compilers (e.g. ghc984, ghc9102).
  if !((impl(ghc >=9.6) && impl(ghc <9.7)) || (impl(ghc >=9.12) && impl(ghc <9.13)))
    buildable: False
  ghc-options:
    -fplugin
    PlutusTx.Plugin
    -fno-full-laziness
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-spec-constr
    -fno-specialise
    -fno-strictness
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields

  build-depends:
    aeson,
    base >=4.2 && <5,
    bytestring,
    directory,
    plutus-core ^>=1.62,
    plutus-core:flat ^>=1.62,
    plutus-midnight-zk,
    plutus-tx ^>=1.62,
    plutus-tx-plugin ^>=1.62,
