[package]
name    = "rust-midnight-zk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "write-test-vectors"
path = "src/main.rs"

[features]
default = ["fewer-point-sets"]
fewer-point-sets = [
    "midnight-circuits/fewer-point-sets",
    "midnight-proofs/fewer-point-sets",
]

[dependencies]
midnight-circuits.workspace  = true
midnight-proofs.workspace    = true
midnight-zk-stdlib.workspace = true
midnight-curves.workspace    = true
ff.workspace          = true
group.workspace       = true
serde_json.workspace  = true
rand.workspace        = true
rand_chacha.workspace = true
sha2.workspace        = true
hex-literal.workspace = true
num-bigint.workspace  = true
num-traits.workspace  = true
